Fix timeline icon alignment and mobile burger menu color
Center timeline marker icons on the dotted line. Override Bulma 1.0
default blue burger menu color to match site text color.

--- a/source/static/css/about.scss
+++ b/source/static/css/about.scss
@@ -87,12 +87,14 @@
 
         .marker {
           position: absolute;
-          left: -62px;
+          left: -51px;
           top: 4px;
+          width: 20px;
+          text-align: center;
           color: var(--accent);
 
           .fa {
-            font-size: 20px;
+            font-size: 18px;
           }
         }
 
